--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                     </div>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="C:\Users\VENKATA SAI KUMAR\OneDrive\图片\Camera Roll\MVSK2.jpg" alt="Profile" class="profile-img">
+                    <img src="![Image](https://github.com/user-attachments/assets/a46496f6-0f45-4853-bbed-259e7fdbb19d)" alt="Profile" class="profile-img">
                 </div>
             </div>
         </div>
@@ -823,4 +823,5 @@
                         alert('Thank you for reaching out! I will get back to you soon.');
                     });
                 });
+
             </script>
