--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                     </div>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="![Image](https://github.com/user-attachments/assets/a46496f6-0f45-4853-bbed-259e7fdbb19d)" alt="Profile" class="profile-img">
+                    <img src="images/MVSK3.jpg" alt="Profile" class="profile-img">
                 </div>
             </div>
         </div>
@@ -825,3 +825,4 @@
                 });
 
             </script>
+
